# anwendungsentwicklung_cpp

./: .gitattributes
01_tag/01_aufgabe/: CMakeLists.txt  dynamicPrint.cpp  dynamicPrint.h  main.cpp  staticPrint.cpp  staticPrint.h
01_tag/02_aufgabe/: CMakeLists.txt  main.cpp
01_tag/03_aufgabe/: CMakeLists.txt  document.cpp  document.h  main.cpp  observer.cpp  observer.h
01_tag/04_aufgabe/: CMakeLists.txt  main.cpp
02_tag/01_aufgabe/: Adressanzeige.cpp  Adressanzeige.h  Adresseingabe.cpp  Adresseingabe.h  CMakeLists.txt  main.cpp  ownValidator.cpp  ownValidator.h
03_tag/01_aufgabe/cmake/: CMakeLists.txt
03_tag/01_aufgabe/include/: AdressModel.cpp  AdressModel.h  Adresseingabe.cpp  CSVManager.cpp  TestMainWindow.cpp  TestMainWindow.h
04_tag/01_aufgabe/cmake/: .cproject  .project  CMakeLists.txt
04_tag/01_aufgabe/gui/: TestMainWindow.ui
04_tag/01_aufgabe/include/: AdressModel.cpp  AdressModel.h  Adresseingabe.h  CSVManager.h  SQLManager.cpp  SQLManager.h  TestMainWindow.cpp  main.cpp  ownValidator.cpp  ownValidator.h
04_tag/01_aufgabe/src/: adressDB.db  adressliste.sql  sortedDesc.txt  test.csv  test2.csv
04_tag/01_aufgabe/xcode/: CMakeCache.txt  cmake_install.cmake  ui_TestMainWindow.h
04_tag/01_aufgabe/xcode/01_aufgabe.build/Debug/01_aufgabe.build/: Script-4F4B592EFC594607BC383D4F.sh  dgph
04_tag/01_aufgabe/xcode/01_aufgabe.build/Debug/01_aufgabe_autogen.build/: Script-10EFFCE9A9D7438B9E6E1D71.sh  dgph
04_tag/01_aufgabe/xcode/01_aufgabe.build/Debug/ALL_BUILD.build/: Script-48C9C52645B440A7921F307B.sh  dgph
04_tag/01_aufgabe/xcode/01_aufgabe.build/Debug/ZERO_CHECK.build/: Script-DE230B25CA9C4F8691AF7917.sh  dgph
04_tag/01_aufgabe/xcode/01_aufgabe.xcodeproj/: project.pbxproj
04_tag/01_aufgabe/xcode/01_aufgabe_autogen/: mocs_compilation.cpp
04_tag/01_aufgabe/xcode/01_aufgabe_autogen/include_Debug/VIAB7YHCDN/: moc_AdressModel.cpp  moc_Adresseingabe.cpp  moc_TestMainWindow.cpp
04_tag/01_aufgabe/xcode/CMakeScripts/: 01_aufgabe_autogen_cmakeRulesBuildPhase.makeDebug  01_aufgabe_autogen_cmakeRulesBuildPhase.makeMinSizeRel  01_aufgabe_autogen_cmakeRulesBuildPhase.makeRelWithDebInfo  01_aufgabe_autogen_cmakeRulesBuildPhase.makeRelease  01_aufgabe_cmakeRulesBuildPhase.makeRelease  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
04_tag/01_aufgabe/xcode/Debug/: 01_aufgabe
05_tag/01_aufgabe/cmake/: CMakeLists.txt
05_tag/01_aufgabe/include/: MyClient.cpp  MyClient.h  XMLMessage.cpp  XMLMessage.h  main.cpp
06_tag/cmake/: CMakeLists.txt
06_tag/gui/: MyMainWindow.ui  MyWidget.ui
06_tag/include/: InsertSort.h  MyMainWindow.h  MyWidget.h
06_tag/src/: InsertSort.cpp  MyMainWindow.cpp  MyWidget.cpp  main.cpp
07_tag/cmake/: CMakeLists.txt
07_tag/gui/: DisplayWidget.ui  FilterWidget.ui  MainWindow.ui  SourceWidget.ui
07_tag/include/: DisplayWidget.h  FilterWidget.h  MainWindow.h  SourceWidget.h
07_tag/src/: DisplayWidget.cpp  FilterWidget.cpp  MainWindow.cpp  SourceWidget.cpp  main.cpp  test.avi
07_tag/xcode/: CMakeCache.txt  cmake_install.cmake  ui_DisplayWidget.h  ui_FilterWidget.h  ui_MainWindow.h  ui_SourceWidget.h
07_tag/xcode/07_tag_01_aufgabe.build/Debug/07_tag_01_aufgabe.build/: dgph
07_tag/xcode/07_tag_01_aufgabe.build/Debug/07_tag_01_aufgabe_autogen.build/: Script-C9C49706A1764F78B7523C7D.sh  dgph
07_tag/xcode/07_tag_01_aufgabe.build/Debug/ZERO_CHECK.build/: dgph
07_tag/xcode/07_tag_01_aufgabe.build/Release/07_tag_01_aufgabe.build/: Script-FFA9ED4D709F4C50A37919F9.sh  dgph
07_tag/xcode/07_tag_01_aufgabe.build/Release/07_tag_01_aufgabe_autogen.build/: dgph
07_tag/xcode/07_tag_01_aufgabe.build/Release/ZERO_CHECK.build/: Script-E3572A629C97413D97A719B5.sh  dgph
07_tag/xcode/07_tag_01_aufgabe.xcodeproj/: project.pbxproj
07_tag/xcode/07_tag_01_aufgabe.xcodeproj/xcuserdata/abdullah.xcuserdatad/xcschemes/: xcschememanagement.plist
07_tag/xcode/07_tag_01_aufgabe_autogen/: mocs_compilation.cpp
07_tag/xcode/07_tag_01_aufgabe_autogen/include_Debug/DW4F2VDUYN/: moc_FilterWidget.cpp
07_tag/xcode/07_tag_01_aufgabe_autogen/include_Release/DW4F2VDUYN/: moc_DisplayWidget.cpp  moc_MainWindow.cpp  moc_SourceWidget.cpp
07_tag/xcode/CMakeScripts/: 07_tag_01_aufgabe_autogen_cmakeRulesBuildPhase.makeDebug  07_tag_01_aufgabe_autogen_cmakeRulesBuildPhase.makeMinSizeRel  07_tag_01_aufgabe_autogen_cmakeRulesBuildPhase.makeRelWithDebInfo  07_tag_01_aufgabe_autogen_cmakeRulesBuildPhase.makeRelease  07_tag_01_aufgabe_cmakeRulesBuildPhase.makeMinSizeRel  ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
07_tag/xcode/Debug/: 07_tag_01_aufgabe
07_tag/xcode/Release/: 07_tag_01_aufgabe
08_tag/cmake/: CMakeLists.txt
08_tag/src/: Brain.cpp  LoadDataWidget.cpp
08_tag/src/material/: CMakeLists.txt
08_tag/xcode/: CMakeCache.txt  cmake_install.cmake  ui_LoadDataWidget.h  ui_MainWindow.h  ui_TrainWidget.h
08_tag/xcode/01_aufgabe.build/Debug/01_aufgabe.build/: Script-C8BC35F4045F4317BD632458.sh  dgph
08_tag/xcode/01_aufgabe.build/Debug/01_aufgabe_autogen.build/: Script-2963B0E530304F28A834B25A.sh  dgph
08_tag/xcode/01_aufgabe.build/Debug/ALL_BUILD.build/: Script-12883E17AFE340C4891CA7B6.sh  dgph
08_tag/xcode/01_aufgabe.build/Debug/ZERO_CHECK.build/: Script-60DEE8D48D504AF288DAEA9E.sh  dgph
08_tag/xcode/01_aufgabe.xcodeproj/: project.pbxproj
08_tag/xcode/01_aufgabe_autogen/: mocs_compilation.cpp
08_tag/xcode/01_aufgabe_autogen/include_Debug/V7OEQZMVFY/: moc_Brain.cpp  moc_LoadDataWidget.cpp  moc_MainWindow.cpp  moc_TrainWidget.cpp
08_tag/xcode/CMakeScripts/: 01_aufgabe_autogen_cmakeRulesBuildPhase.makeDebug  01_aufgabe_autogen_cmakeRulesBuildPhase.makeMinSizeRel  01_aufgabe_autogen_cmakeRulesBuildPhase.makeRelWithDebInfo  01_aufgabe_autogen_cmakeRulesBuildPhase.makeRelease  01_aufgabe_cmakeRulesBuildPhase.makeDebug  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
(+30 files in other folders)
